--- a/app/sass/page.scss
+++ b/app/sass/page.scss
@@ -4,6 +4,7 @@
 .page{
 	color:#fff;
 	background:linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(../images/BGMain.jpg) 0 0 no-repeat;
+	background-color: rgb(200,200,100);
 	height:1210px;
 	background-size: cover;
 	text-align: center;
