--- a/app/sass/search.scss
+++ b/app/sass/search.scss
@@ -26,7 +26,7 @@
 	margin:0 auto;
 
 }
-.button__search{
+.button-search{
 	padding:5px 10px;
 	text-transform: none;
   color:#fff;
@@ -36,7 +36,7 @@
     	color:#fff;
     }
 }
-.button__submit{
+.button-submit{
 	color:$disabled-color;
 	text-transform: none;
 	padding:5px 10px;
