--- a/app/sass/page.scss
+++ b/app/sass/page.scss
@@ -8,6 +8,13 @@
 	height:1210px;
 	background-size: cover;
 	text-align: center;
+
+	@media(min-resolution:1.5dppx){
+		.page{
+			background:linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(../images/BGMain@2x.jpg) 0 0 no-repeat;
+		}
+
+	}
 }
 .page__wrapper{
 	display: flex;
@@ -21,7 +28,14 @@
 	background-image: url(../images/logo.png);
 	background-repeat: no-repeat;
 	padding-left:75px;
-  padding-top:15px
+  padding-top:15px;
+
+
+  @media(min-resolution:1.5dppx){
+		.page{
+			background-image: url(../images/logo@2x.png);
+	  }
+	}
 }
 .page__logo{
 	padding-top:38px;
