Valid and beautyfied html

--- a/app/sass/search.scss
+++ b/app/sass/search.scss
@@ -18,6 +18,9 @@
     	color:$button-color;
     }
 }
+.search__header{
+	display: block;
+}
 .search-buttons-wrapper{
 	width:42%;
 	min-width:220px;
